syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service GPSSVC {
    // LivePosition streams Position updates
    rpc LivePosition(google.protobuf.Empty) returns (stream Position);
    
    // InjectPosition Inject fake position
    // use it for debug purpose only
    rpc InjectPosition(Position) returns (google.protobuf.Empty);
}

message Position {
    double latitude = 1;
    double longitude = 2;
    // true track when available
    double heading = 3;
    // speed in km/h, ground speed when available
    double speed = 4;
    // approximating precisions in meters
    double horizontal_precision = 5;

    google.protobuf.Timestamp ts = 6;
    
    // matched data
    bool matched = 7;
    double matched_latitude = 8;
    double matched_longitude = 9;
    double matched_heading = 10;
    double matched_distance = 11;
    string road_name = 12;
    string hint = 13;
}
